infrastructure/platform/security/acs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stackrox
  labels:
    app.kubernetes.io/part-of: payu
    app.kubernetes.io/component: security
    openshift.io/cluster-monitoring: "true"
